--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.4.3",
+    "nanoid": "^4.0.0",
     "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
