--- a/scripts/projects-data.json
+++ b/scripts/projects-data.json
@@ -8,7 +8,8 @@
       "repo":"https://github.com/ahmadzaki2975/OnlineShopApp"
     },
     {
-      "title":"test"
+      "title":"test",
+      "desc":"ingfo"
     }
   ]
 }
